--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
   <title>Appcrowd</title>
   <base href="/">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/img/logo-blk1.png">
+  <link rel="icon" type="image/png" sizes="16x16" >
+  <!-- href="assets/img/logo-blk1.png" -->
   <!-- <link rel="manifest" href="manifest.json">
   <link rel="mask-icon" href="safari-pinned-tab.svg" color="#2c3e50"> -->
   <meta name="theme-color" content="#ffffff">
